[metadata]
# replace with your username:
name = aioaria2
version = 1.3.1
keywords =
    asyncio
    Aria2
author = synodriver
author_email = diguohuangjiajinweijun@gmail.com
description = Support Aria2 rpc client and manage server with async/await
long_description = file: README.markdown
long_description_content_type = text/markdown
url = https://github.com/synodriver/aioaria2
project_urls =
    Bug Tracker = https://github.com/synodriver/aioaria2/issues
classifiers =
    Development Status :: 3 - Alpha
    Framework :: AsyncIO
    Operating System :: OS Independent
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
install_requires =
    aiohttp
    aiofiles
    typing-extensions

[options]
include_package_data = True
packages = find:
python_requires = >=3.7